[tool.poetry]
name = "acl-gan"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.7.0"
numpy = "^1.19.2"
torchvision = "^0.8.1"
opencv-python = "^4.4.0"
pytorch-datastream = "^0.4.0"
pytorch-lantern = "^0.11.0"
segmentation-models-pytorch = "^0.1.3"
pydantic = "^1.7.3"
ipykernel = "^5.5.0"
data-kale = "^0.1.3"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
